test: simple commit

--- a/forecast_facturapp.ipynb
+++ b/forecast_facturapp.ipynb
@@ -70,6 +70,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Opciones avanzadas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Opción avanzada 1: Temporal Fusion Transformers (TFT)"
    ]
   },
