--- a/forecast_facturapp.ipynb
+++ b/forecast_facturapp.ipynb
@@ -19,7 +19,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Hacer conexión"
+   ]
   },
   {
    "cell_type": "markdown",
