feat: New RMSE metric for models

--- a/XGBoost/forecast_facturapp_xgboost_v1.ipynb
+++ b/XGBoost/forecast_facturapp_xgboost_v1.ipynb
@@ -160,14 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 19.83482483361308\n"
+      "Mean Squared Error (MSE): 19.83482483361308\n",
+      "Root Mean Squared Error (RMSE): 4.453630522799695\n"
      ]
     },
     {
@@ -244,7 +245,7 @@
        "184     2.0  11.172670"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +286,11 @@
     "\n",
     "# Evaluar el modelo\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f'Mean Squared Error: {mse}')\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "# Mostrar métricas\n",
+    "print(f'Mean Squared Error (MSE): {mse}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
     "\n",
     "# Crear un DataFrame para comparar los valores reales y predichos\n",
     "df_forecast = pd.DataFrame({\n",
@@ -304,7 +309,7 @@
     "plt.show()\n",
     "\n",
     "# Mostrar las primeras filas de las predicciones comparadas\n",
-    "df_forecast.head()"
+    "df_forecast.head(5)"
    ]
   },
   {
@@ -323,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +337,8 @@
      "text": [
       "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
       "Mejores hiperparámetros: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 1000, 'subsample': 0.8}\n",
-      "Mean Squared Error: 15.166302513068702\n"
+      "Mean Squared Error (MSE): 15.166302513068702\n",
+      "Root Mean Squared Error (RMSE): 3.8943937285627275\n"
      ]
     },
     {
@@ -396,81 +402,6 @@
        "      <td>2.0</td>\n",
        "      <td>9.694556</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.163572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.734729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.594573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>3.439581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.274015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>5.266487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.027422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.906846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.196748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.018954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.461498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.756466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.540274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.850962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.742906</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -481,25 +412,10 @@
        "181     3.0   7.820055\n",
        "182     2.0   2.374523\n",
        "183     2.0   1.826264\n",
-       "184     2.0   9.694556\n",
-       "185     1.0   5.163572\n",
-       "186     8.0   3.734729\n",
-       "187     2.0   2.594573\n",
-       "188    -1.0   3.439581\n",
-       "189     5.0   1.274015\n",
-       "190    10.0   5.266487\n",
-       "191     9.0   3.027422\n",
-       "192     7.0   3.906846\n",
-       "193     5.0   7.196748\n",
-       "194     5.0   4.018954\n",
-       "195     8.0   1.461498\n",
-       "196     4.0   5.756466\n",
-       "197     8.0   3.540274\n",
-       "198     6.0   4.850962\n",
-       "199     6.0   4.742906"
+       "184     2.0   9.694556"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +478,11 @@
     "\n",
     "# Evaluar el modelo\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f'Mean Squared Error: {mse}')\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "# Mostrar métricas\n",
+    "print(f'Mean Squared Error (MSE): {mse}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
     "\n",
     "# Crear un DataFrame para comparar los valores reales y predichos\n",
     "df_forecast = pd.DataFrame({\n",
@@ -581,7 +501,7 @@
     "plt.show()\n",
     "\n",
     "# Mostrar las primeras filas de las predicciones comparadas\n",
-    "df_forecast.head(20)"
+    "df_forecast.head(5)"
    ]
   },
   {
@@ -593,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +522,8 @@
      "text": [
       "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
       "Mejores hiperparámetros: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 1000, 'subsample': 0.8}\n",
-      "Mean Squared Error: 15.166302513068702\n"
+      "Mean Squared Error (MSE): 15.166302513068702\n",
+      "Root Mean Squared Error (RMSE): 3.8943937285627275\n"
      ]
     },
     {
@@ -666,81 +587,6 @@
        "      <td>2.0</td>\n",
        "      <td>9.694556</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.163572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.734729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.594573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>3.439581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.274015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>5.266487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.027422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.906846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.196748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.018954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.461498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.756466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.540274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.850962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.742906</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -751,25 +597,10 @@
        "181     3.0   7.820055\n",
        "182     2.0   2.374523\n",
        "183     2.0   1.826264\n",
-       "184     2.0   9.694556\n",
-       "185     1.0   5.163572\n",
-       "186     8.0   3.734729\n",
-       "187     2.0   2.594573\n",
-       "188    -1.0   3.439581\n",
-       "189     5.0   1.274015\n",
-       "190    10.0   5.266487\n",
-       "191     9.0   3.027422\n",
-       "192     7.0   3.906846\n",
-       "193     5.0   7.196748\n",
-       "194     5.0   4.018954\n",
-       "195     8.0   1.461498\n",
-       "196     4.0   5.756466\n",
-       "197     8.0   3.540274\n",
-       "198     6.0   4.850962\n",
-       "199     6.0   4.742906"
+       "184     2.0   9.694556"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,7 +663,11 @@
     "\n",
     "# Evaluar el modelo\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f'Mean Squared Error: {mse}')\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "# Mostrar métricas\n",
+    "print(f'Mean Squared Error (MSE): {mse}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
     "\n",
     "# Crear un DataFrame para comparar los valores reales y predichos\n",
     "df_forecast = pd.DataFrame({\n",
@@ -859,7 +694,7 @@
     "plt.show()\n",
     "\n",
     "# Mostrar las primeras filas de las predicciones comparadas\n",
-    "df_forecast.head(20)"
+    "df_forecast.head(5)"
    ]
   },
   {
@@ -871,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +715,8 @@
      "text": [
       "Fitting 5 folds for each of 1 candidates, totalling 5 fits\n",
       "Mejores hiperparámetros: {'colsample_bytree': 0.8, 'learning_rate': 0.1, 'max_depth': 7, 'n_estimators': 1000, 'subsample': 0.8}\n",
-      "Mean Squared Error: 15.166302513068702\n"
+      "Mean Squared Error (MSE): 15.166302513068702\n",
+      "Root Mean Squared Error (RMSE): 3.8943937285627275\n"
      ]
     },
     {
@@ -944,81 +780,6 @@
        "      <td>2.0</td>\n",
        "      <td>9.694556</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>185</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.163572</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>186</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.734729</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>187</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.594573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>188</th>\n",
-       "      <td>-1.0</td>\n",
-       "      <td>3.439581</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>189</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.274015</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>190</th>\n",
-       "      <td>10.0</td>\n",
-       "      <td>5.266487</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>191</th>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3.027422</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>192</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>3.906846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.196748</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>194</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.018954</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.461498</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.756466</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3.540274</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.850962</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>4.742906</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1029,25 +790,10 @@
        "181     3.0   7.820055\n",
        "182     2.0   2.374523\n",
        "183     2.0   1.826264\n",
-       "184     2.0   9.694556\n",
-       "185     1.0   5.163572\n",
-       "186     8.0   3.734729\n",
-       "187     2.0   2.594573\n",
-       "188    -1.0   3.439581\n",
-       "189     5.0   1.274015\n",
-       "190    10.0   5.266487\n",
-       "191     9.0   3.027422\n",
-       "192     7.0   3.906846\n",
-       "193     5.0   7.196748\n",
-       "194     5.0   4.018954\n",
-       "195     8.0   1.461498\n",
-       "196     4.0   5.756466\n",
-       "197     8.0   3.540274\n",
-       "198     6.0   4.850962\n",
-       "199     6.0   4.742906"
+       "184     2.0   9.694556"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1058,6 +804,7 @@
     "import xgboost as xgb\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "from sklearn.metrics import root_mean_squared_error\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Asegúrate de que 'df_arima' esté cargado correctamente con las columnas de los productos específicos\n",
@@ -1113,7 +860,11 @@
     "\n",
     "# Evaluar el modelo\n",
     "mse = mean_squared_error(y_test, y_pred)\n",
-    "print(f'Mean Squared Error: {mse}')\n",
+    "rmse = np.sqrt(mse)\n",
+    "\n",
+    "# Mostrar métricas\n",
+    "print(f'Mean Squared Error (MSE): {mse}')\n",
+    "print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
     "\n",
     "# Crear un DataFrame para comparar los valores reales y predichos\n",
     "df_forecast = pd.DataFrame({\n",
@@ -1140,15 +891,8 @@
     "plt.show()\n",
     "\n",
     "# Mostrar las primeras filas de las predicciones comparadas\n",
-    "df_forecast.head(20)"
+    "df_forecast.head(5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
