feat: Prophet model all productos

--- a/04_Prophet/forecast_facturapp_prophet_completo_v1.ipynb
+++ b/04_Prophet/forecast_facturapp_prophet_completo_v1.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4  2022-04-20  1734.857"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,8 +163,8 @@
     ").reset_index()\n",
     "\n",
     "# Renombramos variables para que prophet tome como input\n",
-    "df_prophet = df_prophet.rename(columns={'fecha_venta': 'ds', 'cantidad_ventas_producto': 'y'})\n",
-    "df_prophet.head()"
+    "df = df_prophet.rename(columns={'fecha_venta': 'ds', 'cantidad_ventas_producto': 'y'})\n",
+    "df.head()"
    ]
   },
   {
