feat: df with temperature series for Uruguay

--- a/OpenWeatherMap.ipynb
+++ b/OpenWeatherMap.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Testeando conexión"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -46,6 +53,349 @@
     "\n",
     "# Mostrar la temperatura\n",
     "print(f\"Temperatura actual en Montevideo, Uruguay: {temperature}°C\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Armado de df con serie de temperatura para Uruguay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Temperatura (°C)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2024-09-06 06:00:00</td>\n",
+       "      <td>8.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2024-09-06 09:00:00</td>\n",
+       "      <td>8.57</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-09-06 12:00:00</td>\n",
+       "      <td>9.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2024-09-06 15:00:00</td>\n",
+       "      <td>14.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2024-09-06 18:00:00</td>\n",
+       "      <td>15.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2024-09-06 21:00:00</td>\n",
+       "      <td>14.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2024-09-07 00:00:00</td>\n",
+       "      <td>12.75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2024-09-07 03:00:00</td>\n",
+       "      <td>11.74</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2024-09-07 06:00:00</td>\n",
+       "      <td>11.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2024-09-07 09:00:00</td>\n",
+       "      <td>11.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2024-09-07 12:00:00</td>\n",
+       "      <td>12.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2024-09-07 15:00:00</td>\n",
+       "      <td>15.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2024-09-07 18:00:00</td>\n",
+       "      <td>15.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2024-09-07 21:00:00</td>\n",
+       "      <td>14.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2024-09-08 00:00:00</td>\n",
+       "      <td>13.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2024-09-08 03:00:00</td>\n",
+       "      <td>12.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2024-09-08 06:00:00</td>\n",
+       "      <td>12.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2024-09-08 09:00:00</td>\n",
+       "      <td>11.91</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2024-09-08 12:00:00</td>\n",
+       "      <td>12.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2024-09-08 15:00:00</td>\n",
+       "      <td>14.70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2024-09-08 18:00:00</td>\n",
+       "      <td>15.42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>2024-09-08 21:00:00</td>\n",
+       "      <td>13.86</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>2024-09-09 00:00:00</td>\n",
+       "      <td>12.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>2024-09-09 03:00:00</td>\n",
+       "      <td>12.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>2024-09-09 06:00:00</td>\n",
+       "      <td>11.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2024-09-09 09:00:00</td>\n",
+       "      <td>12.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2024-09-09 12:00:00</td>\n",
+       "      <td>13.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2024-09-09 15:00:00</td>\n",
+       "      <td>14.07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2024-09-09 18:00:00</td>\n",
+       "      <td>15.26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2024-09-09 21:00:00</td>\n",
+       "      <td>14.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2024-09-10 00:00:00</td>\n",
+       "      <td>13.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2024-09-10 03:00:00</td>\n",
+       "      <td>13.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>2024-09-10 06:00:00</td>\n",
+       "      <td>13.82</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>2024-09-10 09:00:00</td>\n",
+       "      <td>13.55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>2024-09-10 12:00:00</td>\n",
+       "      <td>14.68</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>2024-09-10 15:00:00</td>\n",
+       "      <td>18.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>2024-09-10 18:00:00</td>\n",
+       "      <td>20.93</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>2024-09-10 21:00:00</td>\n",
+       "      <td>16.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>2024-09-11 00:00:00</td>\n",
+       "      <td>15.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>2024-09-11 03:00:00</td>\n",
+       "      <td>15.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Fecha  Temperatura (°C)\n",
+       "0  2024-09-06 06:00:00              8.78\n",
+       "1  2024-09-06 09:00:00              8.57\n",
+       "2  2024-09-06 12:00:00              9.96\n",
+       "3  2024-09-06 15:00:00             14.33\n",
+       "4  2024-09-06 18:00:00             15.96\n",
+       "5  2024-09-06 21:00:00             14.84\n",
+       "6  2024-09-07 00:00:00             12.75\n",
+       "7  2024-09-07 03:00:00             11.74\n",
+       "8  2024-09-07 06:00:00             11.18\n",
+       "9  2024-09-07 09:00:00             11.33\n",
+       "10 2024-09-07 12:00:00             12.78\n",
+       "11 2024-09-07 15:00:00             15.38\n",
+       "12 2024-09-07 18:00:00             15.38\n",
+       "13 2024-09-07 21:00:00             14.44\n",
+       "14 2024-09-08 00:00:00             13.36\n",
+       "15 2024-09-08 03:00:00             12.41\n",
+       "16 2024-09-08 06:00:00             12.09\n",
+       "17 2024-09-08 09:00:00             11.91\n",
+       "18 2024-09-08 12:00:00             12.88\n",
+       "19 2024-09-08 15:00:00             14.70\n",
+       "20 2024-09-08 18:00:00             15.42\n",
+       "21 2024-09-08 21:00:00             13.86\n",
+       "22 2024-09-09 00:00:00             12.81\n",
+       "23 2024-09-09 03:00:00             12.15\n",
+       "24 2024-09-09 06:00:00             11.79\n",
+       "25 2024-09-09 09:00:00             12.01\n",
+       "26 2024-09-09 12:00:00             13.03\n",
+       "27 2024-09-09 15:00:00             14.07\n",
+       "28 2024-09-09 18:00:00             15.26\n",
+       "29 2024-09-09 21:00:00             14.22\n",
+       "30 2024-09-10 00:00:00             13.79\n",
+       "31 2024-09-10 03:00:00             13.59\n",
+       "32 2024-09-10 06:00:00             13.82\n",
+       "33 2024-09-10 09:00:00             13.55\n",
+       "34 2024-09-10 12:00:00             14.68\n",
+       "35 2024-09-10 15:00:00             18.40\n",
+       "36 2024-09-10 18:00:00             20.93\n",
+       "37 2024-09-10 21:00:00             16.65\n",
+       "38 2024-09-11 00:00:00             15.62\n",
+       "39 2024-09-11 03:00:00             15.10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "# Cargar el archivo .env y leer las variables de entorno\n",
+    "load_dotenv()\n",
+    "\n",
+    "# Obtener la clave API desde el archivo .env\n",
+    "api_key = os.getenv('OPENWEATHER_API_KEY')\n",
+    "\n",
+    "# Coordenadas de Montevideo, Uruguay\n",
+    "lat = -34.9011\n",
+    "lon = -56.1645\n",
+    "\n",
+    "# URL de la API de OpenWeatherMap (pronóstico de 7 días)\n",
+    "url = f\"http://api.openweathermap.org/data/2.5/forecast?lat={lat}&lon={lon}&appid={api_key}&units=metric\"\n",
+    "\n",
+    "# Hacer la solicitud a la API\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "# Parsear el JSON de la respuesta\n",
+    "weather_data = response.json()\n",
+    "\n",
+    "# Crear una lista para almacenar las fechas y temperaturas\n",
+    "dates = []\n",
+    "temperatures = []\n",
+    "\n",
+    "# Recorrer el pronóstico (cada elemento representa un intervalo de tiempo con el pronóstico)\n",
+    "for forecast in weather_data['list']:\n",
+    "    date = forecast['dt_txt']  # Fecha en formato de texto\n",
+    "    temperature = forecast['main']['temp']  # Temperatura\n",
+    "    dates.append(date)\n",
+    "    temperatures.append(temperature)\n",
+    "\n",
+    "# Crear un DataFrame con las fechas y temperaturas\n",
+    "df = pd.DataFrame({\n",
+    "    'Fecha': dates,\n",
+    "    'Temperatura (°C)': temperatures\n",
+    "})\n",
+    "\n",
+    "# Convertir la columna 'Fecha' a tipo datetime\n",
+    "df['Fecha'] = pd.to_datetime(df['Fecha'])\n",
+    "\n",
+    "# Agrupar por día y calcular la temperatura promedio por día\n",
+    "df_daily = df.groupby(df['Fecha']).mean().reset_index()\n",
+    "\n",
+    "# Mostrar el DataFrame diario\n",
+    "df_daily\n"
    ]
   }
  ],
