--- a/04_Prophet/compare_prophet_models_prod.ipynb
+++ b/04_Prophet/compare_prophet_models_prod.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "notebook_start_time = time.time()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -16,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +161,7 @@
        "4  2022-04-20  1734.857"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -2405,7 +2415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2532,7 +2542,7 @@
        "10                           Navidad 2022-12-25            -3             3"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2576,7 +2586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2729,7 +2739,7 @@
        "4     1068.450200      1068.450200  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2791,7 +2801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2805,7 +2815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2970,7 +2980,7 @@
        "4     1068.450200      1068.450200            0             0  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2988,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -3027,25 +3037,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "15:37:20 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:37:21 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "15:37:22 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:37:22 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "15:37:22 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:37:22 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "15:37:23 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:37:23 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "15:37:23 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:37:24 - cmdstanpy - INFO - Chain [1] done processing\n",
-      "15:37:24 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:37:24 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "00:48:54 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "00:48:54 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "00:48:56 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "00:48:56 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "00:48:57 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "00:48:57 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "00:48:58 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "00:48:58 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "00:49:00 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "00:49:00 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "00:49:01 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "00:49:01 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -3147,7 +3157,7 @@
        "5  545.253076  124.190054  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3275,7 +3285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -3290,8 +3300,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "15:41:38 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "15:41:38 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "00:49:03 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "00:49:03 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -3385,7 +3395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -3438,7 +3448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -3480,6 +3490,24 @@
     "\n",
     "# Mostrar el gráfico\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tiempo total del notebook: 22.62 segundos\n"
+     ]
+    }
+   ],
+   "source": [
+    "notebook_end_time = time.time()\n",
+    "print(f\"Tiempo total del notebook: {notebook_end_time - notebook_start_time:.2f} segundos\")"
    ]
   },
   {
